<resources>
    <string name="action_settings">Settings</string>
    <string name="app_name">BluetoothRemote</string>
    <string name="send_signal">Send Signal</string>
    <string name="pir_sensor">PIR Sensor</string>
    <string name="led_one">Led One</string>
    <string name="led_two">Led Two</string>
    <string name="inactive">Inactive</string>
    <string name="active">Active</string>
    <string name="activate">Activate</string>
    <string name="CCW">CCW</string>
    <string name="CW">CW</string>
    <string name="pos_degrees">+90</string>
    <string name="neg_degrees">-90</string>
</resources>
