<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <!-- Bluetooth Status-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/BT_MESSAGE"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />

    <!-- Stepper Motor Add Degrees -->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pos_degrees"
        android:id="@+id/POS_DEGREES"
        android:width="110dp"
        android:layout_above="@+id/NEG_DEGREES"
        android:layout_alignStart="@+id/SEND"
        android:onClick="addSpin" />

    <!-- Stepper Motor Subtract Degrees -->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/neg_degrees"
        android:id="@+id/NEG_DEGREES"
        android:width="110dp"
        android:layout_above="@+id/ROTATION"
        android:layout_alignStart="@+id/SEND"
        android:onClick="subSpin" />

    <!-- Stepper Motor Rotation-->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CCW"
        android:id="@+id/ROTATION"
        android:width="110dp"
        android:layout_above="@+id/STEPPER"
        android:layout_alignStart="@+id/SEND"
        android:onClick="toggleSpinDirection" />

    <!-- Stepper Motor Activate -->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activate"
        android:id="@+id/STEPPER"
        android:width="110dp"
        android:layout_below="@+id/LED_1"
        android:layout_alignStart="@+id/SEND"
        android:onClick="sendStepper" />

    <!-- Stepper Motor Status -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inactive"
        android:id="@+id/STEPPER_STATUS"
        android:layout_below="@+id/STEPPER"
        android:layout_alignStart="@+id/ULTRA_SONIC_STATUS" />

    <!-- LED One Activate-->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/led_one"
        android:id="@+id/LED_1"
        android:width="110dp"
        android:height="110dp"
        android:layout_alignParentTop="true"
        android:layout_alignEnd="@+id/SEND"
        android:layout_marginTop="50dp"
        android:onClick="sendLEDOne" />

    <!-- LED One Status-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inactive"
        android:id="@+id/LED_1_STATUS"
        android:layout_below="@+id/LED_1"
        android:layout_alignStart="@+id/LED_1"
        android:layout_marginStart="35dp" />

    <!-- UltraSonic Activate-->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/led_two"
        android:id="@+id/ULTRA_SONIC"
        android:width="110dp"
        android:height="110dp"
        android:layout_marginBottom="60dp"
        android:layout_alignTop="@+id/PIR"
        android:layout_alignStart="@+id/SEND"
        android:onClick="sendUltraSonic" />

    <!-- UltraSonic Status -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inactive"
        android:id="@+id/ULTRA_SONIC_STATUS"
        android:layout_alignTop="@+id/PIR_STATUS"
        android:layout_alignStart="@+id/ULTRA_SONIC"
        android:layout_marginStart="35dp" />

    <!-- PIR Activate-->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pir_sensor"
        android:id="@+id/PIR"
        android:width="110dp"
        android:height="110dp"
        android:onClick="sendPIR"
        android:layout_above="@+id/SEND"
        android:layout_alignEnd="@+id/SEND"
        android:layout_marginBottom="55dp" />

    <!-- PIR Status-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inactive"
        android:id="@+id/PIR_STATUS"
        android:layout_above="@+id/PIR"
        android:layout_alignStart="@+id/LED_1_STATUS" />

    <!-- Send Command Button -->
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_signal"
        android:id="@+id/SEND"
        android:width="300dp"
        android:clickable="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"
        android:onClick="sendCommands" />

</RelativeLayout>
